--- a/src/pages/AdminDashboard/AdminDashboard.module.css
+++ b/src/pages/AdminDashboard/AdminDashboard.module.css
@@ -43,6 +43,26 @@
   overflow-y: auto;
 }
 
+/* Estilos generales de la barra de desplazamiento */
+.myTabContent::-webkit-scrollbar {
+  width: 5px; /* ancho de la barra de desplazamiento */
+}
+
+.myTabContent::-webkit-scrollbar-thumb {
+  background-color: #888; /* color del thumb (el "mango" de la barra) */
+  border-radius: 6px; /* bordes redondeados */
+}
+
+.myTabContent::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* color del fondo de la barra de desplazamiento */
+}
+
+/* Estilos específicos para Firefox */
+.myTabContent {
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f1f1f1;
+}
+
 .tabPane {
   display: none;
   padding: 20px;
